--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "webpack-dev-server": "^3.2.0"
   },
   "dependencies": {
+    "iview": "^3.2.2",
     "vue": "^2.6.7",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.2"
