--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
     "bootstrap": "^3.4.1",
+    "canvas": "^2.3.1",
     "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.19.1",
+    "jsbarcode": "^3.11.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
+    "vue-easy-print": "0.0.7",
     "vue-loader": "^15.6.4",
+    "vue-print-nb": "^1.0.3",
     "vue-template-compiler": "^2.6.7",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
