--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-cms-125",
+  "name": "economy-web",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "assets-webpack-plugin": "^3.9.10",
     "axios": "^0.18.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
@@ -19,6 +20,8 @@
     "babel-preset-stage-0": "^6.24.1",
     "bootstrap": "^3.4.1",
     "canvas": "^2.3.1",
+    "clean-webpack-plugin": "^2.0.0",
+    "cross-env": "^5.2.0",
     "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
@@ -30,6 +33,7 @@
     "vue-loader": "^15.6.4",
     "vue-print-nb": "^1.0.3",
     "vue-template-compiler": "^2.6.7",
+    "vuex": "^3.1.0",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.0"
