--- a/package.json
+++ b/package.json
@@ -1,47 +1,67 @@
 {
   "name": "economy-web",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A Vue.js project",
+  "author": "jacksondemo <15196608376@163.com>",
+  "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --open --port 3000 --hot"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "assets-webpack-plugin": "^3.9.10",
-    "axios": "^0.18.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-component": "^1.1.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-0": "^6.24.1",
-    "bootstrap": "^3.4.1",
-    "canvas": "^2.3.1",
-    "clean-webpack-plugin": "^2.0.0",
-    "cross-env": "^5.2.0",
-    "css-loader": "^2.1.0",
-    "file-loader": "^3.0.1",
-    "html-webpack-plugin": "^3.2.0",
-    "http-proxy-middleware": "^0.19.1",
-    "jsbarcode": "^3.11.0",
-    "style-loader": "^0.23.1",
-    "url-loader": "^1.1.2",
-    "vue-easy-print": "0.0.7",
-    "vue-loader": "^15.6.4",
-    "vue-print-nb": "^1.0.3",
-    "vue-template-compiler": "^2.6.7",
-    "vuex": "^3.1.0",
-    "webpack": "^4.29.5",
-    "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.2.0"
+    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "start": "npm run dev",
+    "build": "node build/build.js"
   },
   "dependencies": {
-    "iview": "^3.2.2",
-    "vue": "^2.6.7",
-    "vue-resource": "^1.5.1",
-    "vue-router": "^3.0.2"
-  }
+    "vue": "^2.5.2",
+    "vue-router": "^3.0.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^7.1.2",
+    "axios": "^0.18.0",
+    "babel-core": "^6.22.1",
+    "babel-helper-vue-jsx-merge-props": "^2.0.3",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-plugin-transform-vue-jsx": "^3.5.0",
+    "babel-preset-env": "^1.3.2",
+    "babel-preset-stage-2": "^6.22.0",
+    "bootstrap": "^4.3.1",
+    "chalk": "^2.0.1",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.28.0",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^1.1.4",
+    "friendly-errors-webpack-plugin": "^1.6.1",
+    "html-webpack-plugin": "^4.0.0-beta.5",
+    "iview": "^3.3.0",
+    "node-notifier": "^5.1.2",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "ora": "^1.2.0",
+    "portfinder": "^1.0.13",
+    "postcss-import": "^11.0.0",
+    "postcss-loader": "^2.0.8",
+    "postcss-url": "^7.2.1",
+    "rimraf": "^2.6.0",
+    "semver": "^5.3.0",
+    "shelljs": "^0.7.6",
+    "uglifyjs-webpack-plugin": "^1.1.1",
+    "url-loader": "^1.1.2",
+    "vue-loader": "^15.7.0",
+    "vue-style-loader": "^3.0.1",
+    "vue-template-compiler": "^2.5.2",
+    "vuex": "^3.1.0",
+    "webpack": "^4.29.6",
+    "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.2.1",
+    "webpack-merge": "^4.1.0"
+  },
+  "engines": {
+    "node": ">= 6.0.0",
+    "npm": ">= 3.0.0"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
